git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@3027 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -50,7 +50,7 @@
 
     <!-- Default Cobertura config -->
     <kuali.cobertura.instrumentation.ignore>DO_NOT_MATCH_ANYTHING_PATTERN</kuali.cobertura.instrumentation.ignore>
-    <kuali.cobertura.instrumentation.exclude>DO_NOT_MATCH_ANYTHING_PATTERN</kuali.cobertura.instrumentation.exclude>
+    <kuali.cobertura.instrumentation.exclude>**/*</kuali.cobertura.instrumentation.exclude>
 
     <!-- The jxr, pmd, and taglist plugins all have an aggregate option -->
     <kuali.reporting.aggregate>true</kuali.reporting.aggregate>
