--- a/common/pom.xml
+++ b/common/pom.xml
@@ -16,8 +16,7 @@
   limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
@@ -26,7 +25,7 @@
   </parent>
   <groupId>org.kuali</groupId>
   <artifactId>kuali-common</artifactId>
-  <version>26-SNAPSHOT</version>
+  <version>26</version>
   <packaging>pom</packaging>
   <name>Kuali Common</name>
 
@@ -125,9 +124,9 @@
   </repositories>
 
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/common</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/common</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/trunk/common</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-common-26</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-common-26</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/tags/kuali-common-26</url>
   </scm>
 
   <profiles>
