--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -279,7 +279,7 @@
             <arguments>${kuali.release.arguments}</arguments>
             <releaseProfiles>${kuali.release.profiles}</releaseProfiles>
             <useReleaseProfile>${kuali.release.use.maven.profile}</useReleaseProfile>
-            <developmentVersion>${kuali.development.version}</developmentVersion>
+            <developmentVersion>${kuali.release.dev.version}</developmentVersion>
             <releaseVersion>${kuali.release.version}</releaseVersion>
             <username>${kuali.release.username}</username>
             <password>${kuali.release.password}</password>
