[maven-release-plugin] prepare release kuali-common-27
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@3054 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -25,7 +25,7 @@
   </parent>
   <groupId>org.kuali</groupId>
   <artifactId>kuali-common</artifactId>
-  <version>27-SNAPSHOT</version>
+  <version>27</version>
   <packaging>pom</packaging>
   <name>Kuali Common</name>
 
@@ -124,9 +124,9 @@
   </repositories>
 
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/common</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/common</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/trunk/common</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-common-27</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-common-27</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/tags/kuali-common-27</url>
   </scm>
 
   <profiles>
