--- a/kuali-threads/.project
+++ b/kuali-threads/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>maven-cloudfront-plugin</name>
+  <name>kuali-threads</name>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.jdt.core.javabuilder</name>
