--- a/kuali-threads/pom.xml
+++ b/kuali-threads/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>kuali-threads</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>Kuali Threads</name>
-  <description>Small helper package for writing multi-threaded applications</description>
+  <description>Small helper package for writing multi-threaded apps</description>
   <properties>
     <kuali.compile.source>1.5</kuali.compile.source>
     <kuali.compile.target>1.5</kuali.compile.target>
