--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -168,7 +168,7 @@
       <extension>
         <groupId>org.kuali.maven.wagons</groupId>
         <artifactId>maven-s3-wagon</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0</version>
       </extension>
     </extensions>
     <pluginManagement>
@@ -182,7 +182,7 @@
         <plugin>
           <groupId>org.kuali.maven.plugins</groupId>
           <artifactId>maven-cloudfront-plugin</artifactId>
-          <version>1.1.0-SNAPSHOT</version>
+          <version>1.1.0</version>
           <configuration>
             <organizationGroupId>${kuali.organization.group.id}</organizationGroupId>
             <forceMojoExecution>true</forceMojoExecution>
