--- a/common/pom.xml
+++ b/common/pom.xml
@@ -16,7 +16,8 @@
   limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
@@ -115,10 +116,10 @@
       <name>Nexus Repository Manager</name>
       <url>http://nexus.kuali.org/content/groups/public</url>
       <releases>
-        <enabled>true</enabled>
+        <enabled>${kuali.repo.releases}</enabled>
       </releases>
       <snapshots>
-        <enabled>true</enabled>
+        <enabled>${kuali.repo.snapshots}</enabled>
       </snapshots>
     </repository>
   </repositories>
