kuali.repo property
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@3113 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -114,7 +114,7 @@
     <repository>
       <id>kuali.nexus</id>
       <name>Nexus Repository Manager</name>
-      <url>http://nexus.kuali.org/content/groups/public</url>
+      <url>${kuali.repo}</url>
       <releases>
         <enabled>${kuali.repo.releases}</enabled>
       </releases>
