--- a/maven-kuali-skin/pom.xml
+++ b/maven-kuali-skin/pom.xml
@@ -31,7 +31,7 @@
 
   <groupId>org.kuali.maven.skins</groupId>
   <artifactId>maven-kuali-skin</artifactId>
-  <version>1.0</version>
+  <version>1.0-SNAPSHOT</version>
 
   <name>Kuali Site Skin</name>
   <description>Kuali Site Skin</description>
