[maven-release-plugin] prepare release maven-kuali-skin-1.0
git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3124 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-kuali-skin/pom.xml
+++ b/maven-kuali-skin/pom.xml
@@ -19,8 +19,7 @@
   under the License.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -31,15 +30,15 @@
 
   <groupId>org.kuali.maven.skins</groupId>
   <artifactId>maven-kuali-skin</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>Kuali Site Skin</name>
   <description>Kuali Site Skin</description>
 
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-kuali-skin</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-kuali-skin</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/trunk/maven-kuali-skin</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-kuali-skin-1.0</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-kuali-skin-1.0</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/tags/maven-kuali-skin-1.0</url>
   </scm>
 </project>
 
