[maven-release-plugin] prepare for next development iteration
git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3126 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-kuali-skin/pom.xml
+++ b/maven-kuali-skin/pom.xml
@@ -30,15 +30,15 @@
 
   <groupId>org.kuali.maven.skins</groupId>
   <artifactId>maven-kuali-skin</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
 
   <name>Kuali Site Skin</name>
   <description>Kuali Site Skin</description>
 
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-kuali-skin-1.0</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-kuali-skin-1.0</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/tags/maven-kuali-skin-1.0</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-kuali-skin</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-kuali-skin</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/maven-kuali-skin</url>
   </scm>
 </project>
 
