git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3149 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-ksite-plugin/pom.xml
+++ b/maven-ksite-plugin/pom.xml
@@ -100,8 +100,8 @@
     </dependency>
   </dependencies>
   <scm>
-    <connection>scm:svn:https://test.kuali.org/svn/student/deploymentlab/trunk/maven-kualisite-plugin</connection>
-    <developerConnection>scm:svn:https://test.kuali.org/svn/student/deploymentlab/trunk/maven-kualisite-plugin</developerConnection>
-    <url>http://test.kuali.org/svn/student/deploymentlab/trunk/maven-kualisite-plugin</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-kualisite-plugin</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-kualisite-plugin</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/maven-kualisite-plugin</url>
   </scm>
 </project>
