--- a/maven-cloudfront-plugin/pom.xml
+++ b/maven-cloudfront-plugin/pom.xml
@@ -3,9 +3,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.kuali.pom</groupId>
+    <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>28</version>
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-cloudfront-plugin</artifactId>
